@@ -1,3 +1,8 @@
 AUTOMAKE_OPTIONS = foreign 1.6
 
 SUBDIRS = src pixmaps glade data po
+
+DIST_SOURCES=	intltool-extract.in\
+		intltool-update.in\
+		intltool-merge.in
+
