@@ -2,6 +2,9 @@
 	* src/playlist2.c:	Fixed bug that moved playlist window when
 	search from id3window.
 	* po/fr.po:		Updated translation
+	* src/callback.c:	check_for_errors now checks if there is an
+	actual connection, also don't try to print something you just free'ed.
+	* Makefile.am:		Pack some intool-* stuff.
 
 11-07-2004 Qball < Qball@qballcow.nl>
 	* src/player.c:	All buttons in the main window can now be themed. 
